try adding a disclaimer
No idea how this will work with the existing code but looked fine when
tested alone.

Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,9 @@
     {% include header.html %}
 
     <div class="page-content">
+      <header class="warning-header">
+	<h3 class="warning-h3">This page has been deprecated, please visit <a href="https://scanf.alemayhu.com">https://scanf.alemayhu.com</a>
+      </header>
       <div class="wrapper">
         {{ content }}
       </div>
